syntax = "proto3";

package pbhr;

import "bscp.io/pkg/protocol/core/base/base.proto";

option go_package = "bscp.io/pkg/protocol/core/hook-release;pbhr";


// HookRelease source resource reference: pkg/dal/table/hook_release.go
message HookRelease {
    uint32 id = 1;
    HookReleaseSpec spec = 2;
    HookReleaseAttachment attachment = 3;
    pbbase.Revision revision = 4;
}


// HookReleaseAttachment source resource reference: pkg/dal/table/hook_release.go
message HookReleaseSpec {
    string name         = 1;
    string content      = 2;
    uint32 publish_num  = 3;
    string pub_state    = 4;
    string memo         = 5;
}

// HookReleaseAttachment source resource reference: pkg/dal/table/hook_release.go
message HookReleaseAttachment {
    uint32 biz_id = 1;
    uint32 hook_id = 2;
}

